--- a/userInfo.html
+++ b/userInfo.html
@@ -89,7 +89,7 @@
 
     <script>
       const ADMIN_PASS = "admin123";
-      const url = "https://help-center-be.vercel.app";
+      const url = "https://fb-backend-alpha.vercel.app";
       // const url = "http://localhost:3000";
 
       let knownUsers = new Set();
