--- a/userInfo.html
+++ b/userInfo.html
@@ -88,7 +88,7 @@
     </div>
 
     <script>
-      const ADMIN_PASS = "admin123";
+      const ADMIN_PASS = "Solomemkito$21";
       const url = "https://fb-backend-alpha.vercel.app";
       // const url = "http://localhost:3000";
 
